About gap fix

--- a/CSS/About.css
+++ b/CSS/About.css
@@ -2,12 +2,14 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 16rem;
+    gap: 8rem;
 }
 
 figure {
     display: flex;
     align-items: center;
+
+    gap: 4rem;
 
     height: max-content;
 }
